# job-aggregator

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
config/: searches.json
cookbook-ingest/: README.md  config.yaml  pyproject.toml
cookbook-ingest/cookbook_ingest/: __init__.py  classify.py  cli.py  config.py  db.py  extractors.py  ingest.py  llm_client.py  logging_utils.py  models.py  pipeline.py  render.py  segment.py  structure.py  utils.py
cookbook-ingest/docs/: ARCHITECTURE.md  RUNBOOK.md  STATUS.md
cookbook-ingest/tests/: test_config.py  test_pipeline.py  test_render.py  test_segment.py
docker/: .env.example  docker-compose.yml
docker/postgres/: init.sql
meeting-pipeline/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
meeting-pipeline/app/: align.py  audio.py  cli.py  config.py  db.py  diarize.py  ingest.py  logging_utils.py  models.py  pipeline.py  postprocess.py  render.py  summary.py  transcribe.py
meeting-pipeline/docs/: ARCHITECTURE.md  RUNBOOK.md  STATUS.md
meeting-pipeline/scripts/: install_deepthought.sh
meeting-pipeline/tests/: test_align.py  test_config.py  test_render.py
n8n/: discord_format.js  email_parse.js  normalise.js  ollama_summarise.js  scoring.js
n8n/workflows/: email-parse.json  jobspy-scrape.json
rowboat/: README.md  TODO.md
rowboat/docs/: architecture.md  privacy.md  setup.md
rowboat/scripts/: install-zaphod.ps1  verify-deepthought.ps1
scripts/: deploy.sh
